fixed project sub nav on tablet size - started mobile home page styling

--- a/_sass/_projects.scss
+++ b/_sass/_projects.scss
@@ -3,6 +3,7 @@
 
 
 .sub-nav{
+	@extend .col-md-10;
 	@extend .col-lg-11;
 	
 	max-width: 2000px;
